bk_ida/gccida/g1/inlinable_function_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1128:37: error: unknown type name 'inline_data_0'; did you mean 'inline_data'?
int  inlinable_function_p( tree fn, inline_data_0 *id) 
                                    ^~~~~~~~~~~~~
                                    inline_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:101:3: note: 'inline_data' declared here
} inline_data;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1131:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1141:1: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1141:36: error: use of undeclared identifier 'p_int_cst'
$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1142:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1151:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
&& ( lang_hooks_0.tree_inlining.disregard_inline_limits( fn) || 10 * fnp->decl.u1.i <= compiler_params->value / 2) ) 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1151:56: error: called object type '<dependent type>' is not a function or function pointer
&& ( lang_hooks_0.tree_inlining.disregard_inline_limits( fn) || 10 * fnp->decl.u1.i <= compiler_params->value / 2) ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1155:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( lang_hooks_0.tree_inlining.disregard_inline_limits( v16) ) 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1155:56: error: called object type '<dependent type>' is not a function or function pointer
if ( lang_hooks_0.tree_inlining.disregard_inline_limits( v16) ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1163:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v5 = lang_hooks_0.tree_inlining.disregard_inline_limits( v4); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1163:56: error: called object type '<dependent type>' is not a function or function pointer
v5 = lang_hooks_0.tree_inlining.disregard_inline_limits( v4); 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1175:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v2 = lang_hooks_0.tree_inlining.cannot_inline_tree_fn( &fnp); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1175:54: error: called object type '<dependent type>' is not a function or function pointer
v2 = lang_hooks_0.tree_inlining.cannot_inline_tree_fn( &fnp); 
                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1206:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &inlined_fns->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1207:9: error: use of undeclared identifier 'p_int_cst'
while ( p_int_cst->low != fns->data.l[0] ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1209:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1209:50: error: expected expression
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1209:15: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/tree-inline.c:1209:62: error: use of undeclared identifier 'p_int_cst'
p_int_cst = ( $A887AD9C3C6C8CC7716950D571F57C9D *)( ( char *)p_int_cst + 8); 
                                                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/inlinable_function_p/src/obj/tree-inline.o] Error 1
